# webrtc-direct

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
client/: Cargo.toml
client/src/: client.rs  error.rs  framed.rs  lib.rs  sdp.rs
example/: Makefile  README.md
example/client-wasm/: Cargo.toml
example/client-wasm/src/: lib.rs
example/frontend/: index.html  package-lock.json  package.json  tsconfig.json
example/frontend/src/: main.ts
example/server/: Cargo.toml
example/server/src/: main.rs
integration-tests/: .gitignore  Cargo.toml
integration-tests/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
integration-tests/frontend/src/: main.ts
integration-tests/frontend/wasm/: Cargo.toml
integration-tests/frontend/wasm/src/: lib.rs
integration-tests/src/: echo_server.rs  lib.rs  main.rs
protocol/: Cargo.toml
protocol/src/: chunking.rs  fingerprint.rs  framing.rs  lib.rs  limits.rs  sdp.rs  ufrag.rs
server/: Cargo.toml
server/src/: connection.rs  handshake.rs  lib.rs  listener.rs  server.rs
server/src/stream/: data_stream.rs  framed.rs  mod.rs
server/src/stun/: mod.rs  parse.rs
server/src/tls/: certificate.rs  mod.rs
server/src/utils/: connection_limit.rs  mod.rs  socket.rs
