[package]
name = "webrtc-direct-integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
webrtc-direct-server.workspace = true
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
headless_chrome = "1.0.21"
serial_test = "3"
