[package]
name = "webrtc-direct-protocol"
version = "0.2.0"
edition = "2024"
description = "Wire protocol (framing, chunking, LZ4 compression, SDP) for WebRTC Direct connections"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/vastrum/webrtc-direct"

[dependencies]
hex = "0.4"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
lz4_flex = "0.12"
